# PersonalityPrediction

./: Makefile  README.md  log_file  personalityprediction.py  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: CI.yml
notebooks/data/: personality_ckecking.ipynb
src/: runner_builder.py  runner_inference.py
src/artifacts/: DT_v1  score.txt
src/components/: data_loading.py  data_preprocessing.py  model_all.py
src/configs/: .env  __init__.py  db_settings.py  log_settings.py  model_settings.py
src/logs/: pytest_report.html
src/pipeline/: model_inference_pipeline.py  model_load_pipeline.py
tests/: note for me .txt
tests/test_pretrain/: test_data_loading.py  test_data_preprocessing.py  test_model_training.py
tests/tests_posttrain/: test_model_after_training.py
