[project]
name = "personalityprediction"
version = "0.1.0"
description = ""
authors = [
    {name = "salmacmpeg",email = "salmacmpeg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
